--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "jest-mock": "^24.8.0",
     "lodash": "^4.17.11",
-    "quill": "^1.3.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-modal": "^3.8.1",
@@ -20,15 +18,26 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
+  "devDependencies": {
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^24.8.0",
+    "enzyme": "^3.10.0",
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
+    "react-mock-router": "^1.0.15",
+    "react-test-renderer": "^16.8.6",
+    "redux-mock-store": "^1.5.3"
+  },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
-  "main": "index.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "postinstall": "./node_modules/.bin/webpack --mode=production",
     "start": "./node_modules/.bin/webpack --mode=production",
     "webpack": "webpack --mode=development --watch"
@@ -48,5 +57,10 @@
     "node": "11.6.0",
     "npm": "6.5.0"
   },
-  "devDependencies": {}
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/react"
+    ]
+  }
 }
